--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     }
   },
   "dependencies": {
-    "cordova-android": "~5.1.1",
-    "cordova-ios": "~4.1.1",
+    "cordova-android": "^5.1.1",
+    "cordova-ios": "^4.1.1",
     "cordova-plugin-console": "~1.0.3",
     "cordova-plugin-media": "~2.3.0",
     "cordova-plugin-splashscreen": "~3.1.0",
